Added download result for better library handling
Error markers now show info from downloaders